@@ -168,7 +168,7 @@ protected:
 	CCommandTree	m_commands;
 	const char *	m_appname;
 
-#if !wxUSE_GUI && defined(__WXMAC__)
+#if !wxUSE_GUI && defined(__WXMAC__) && !wxCHECK_VERSION(2, 9, 0)
 	virtual wxAppTraits* CreateTraits();
 #endif
 
